--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "body-parser": "^1.15.2",
         "express": "^4.10.2",
         "redis": "^2.6.3",
-        "socket.io": "^1.7.1",
-        "jade": "^1.9.2"
+        "socket.io": "^2.1.1"
     },
     "main": "index.js",
     "scripts": {
