--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "my first socket.io app",
     "dependencies": {
         "body-parser": "^1.15.2",
+        "cors": "^2.8.5",
         "express": "^4.10.2",
         "redis": "^2.6.3",
         "socket.io": "^2.1.1"
